syntax = "proto3";
package verifiableprocessing;
option go_package = "github.com/ciphersmaug/verifiable-process/zeebe-go-client";

service VerifiableProcessingService {
    rpc prove_execution(ProveRequest) returns (ProveResponse);
    rpc verify_execution(VerifyRequest) returns (VerifyResponse);
} 

message ProveRequest {
    double variable_a = 1;
    double variable_b = 2;
    string operation = 3;
    repeated uint32 image_id= 4;
}

message ProveResponse {
    double response_value = 1;
    repeated uint32 image_id= 2;
    bytes receipt = 3;
}

message VerifyRequest {
    double verification_value = 1;
    repeated uint32 image_id= 2;
    bytes receipt = 3;
}

message VerifyResponse {
    bool is_valid_executed = 1;
} 